[package]
name = "vertex-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "compression-gzip", "compression-br"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
jsonwebtoken = "9.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
futures = "0.3.31"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "performance"
path = "tests/performance.rs"
